Fix issue with menu alignment on firefox
Reported and described here:
https://github.com/haskell/haddock/pull/721#issuecomment-374668869

--- a/haddock-api/resources/html/NewOcean.std-theme/new-ocean.css
+++ b/haddock-api/resources/html/NewOcean.std-theme/new-ocean.css
@@ -144,6 +144,7 @@ body.js-enabled .hide-when-js-enabled {
   #package-header .caption {
     display: inline-block;
     margin: 3px 1em 2px 2em;
+    float: left;
   }
 
   #package-header ul.links {
